--- a/home screen.ipynb
+++ b/home screen.ipynb
@@ -13,23 +13,14 @@
     "using UnityEngine;\n",
     "using UnityEngine.SceneManagement;\n",
     "\n",
-    "public class SeasonMgr : MonoBehaviour {\n",
+    "public class BackToMenu : MonoBehaviour {\n",
     "\n",
-    "\t// Use this for initialization\n",
-    "\tvoid Start () {\n",
-    "\t}\n",
-    "\t\n",
-    "\t// Update is called once per frame\n",
-    "\tvoid Update () {\n",
-    "\t}\n",
-    "    \n",
-    "    // This function is to load the home screen of the game\n",
-    "    public void playGame()\n",
+    "    // this function will call the home screen\n",
+    "    public void back()\n",
     "    {\n",
-    "        Application.LoadLevel(1);\n",
+    "        Application.LoadLevel(0);\n",
     "    }\n",
-    "\n",
-    "}"
+    "}\n"
    ]
   }
  ],
